--- a/index.html
+++ b/index.html
@@ -1,39 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Excel Viewer on GitHub Pages</title>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Excel Data Viewer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Excel Content Display</h2>
-    <input type="file" id="file-input" />
-    <br><br>
-    <div id="excel-data"></div>
+  <h2>Excel Data Viewer</h2>
+  <div id="excel-data"></div>
 
-    <script>
-        document.getElementById('file-input').addEventListener('change', function (e) {
-            var reader = new FileReader();
-            reader.onload = function (e) {
-                var data = new Uint8Array(e.target.result);
-                var workbook = XLSX.read(data, { type: 'array' });
-                var html = '';
-                workbook.SheetNames.forEach(function (sheetName) {
-                    var XL_row_object = XLSX.utils.sheet_to_json(workbook.Sheets[sheetName], { header: 1 });
-                    html += '<h3>' + sheetName + '</h3><table border="1">';
-                    XL_row_object.forEach(function (row) {
-                        html += '<tr>';
-                        row.forEach(function (cell) {
-                            html += '<td>' + cell + '</td>';
-                        });
-                        html += '</tr>';
-                    });
-                    html += '</table><br>';
-                });
-                document.getElementById('excel-data').innerHTML = html;
-            };
-            reader.readAsArrayBuffer(e.target.files);
-        });
-    </script>
+  <!-- SheetJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
