--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Excel Data Viewer</h2>
+  <h2>Passion Data Viewer</h2>
   <div id="excel-data"></div>
 
   <!-- jQuery + DataTables -->
