--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Passion Data Viewer</title>
+  <title>Excel Data Viewer</title>
 
   <!-- DataTables CSS -->
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Passion Data Viewer</h2>
-  <div id="excel-data"></div>
+  <h2>Excel Data Viewer</h2>
 
-  <!-- jQuery + DataTables -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-
-  <!-- SheetJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
-  <script src="script.js"></script>
-</body>
-</html>
+  <!-- Download link -->
+  <p>
+    <a href="data.x
