--- a/index.html
+++ b/index.html
@@ -14,4 +14,18 @@
 
   <!-- Download link -->
   <p>
-    <a href="data.x
+    <a href="data.xlsx" download class="download-btn">⬇️ Download Excel File</a>
+  </p>
+
+  <div id="excel-data"></div>
+
+  <!-- jQuery + DataTables -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
+  <!-- SheetJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+  <script src="script.js"></script>
+</body>
+</html>
