--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Excel Data Viewer</h2>
+  <h2>Passion Contribution Viewer</h2>
 
   <!-- Download link -->
   <p>
