--- a/index.html
+++ b/index.html
@@ -12,20 +12,9 @@
 <body>
   <h2>Passion Monthly Contribution Viewer</h2>
 
-  <!-- Download link -->
-  <p>
-    <a href="data.xlsx" download class="download-btn">⬇️ Download Excel File</a>
-  </p>
-
-  <div id="excel-data"></div>
-
-  <!-- jQuery + DataTables -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-
-  <!-- SheetJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
-  <script src="script.js"></script>
+  <!-- Excel screenshot display -->
+  <div style="text-align:center; margin-top:30px;">
+    <img src="excel_screenshot.png" alt="Excel Sheet Screenshot" style="max-width:90%; border:1px solid #ccc; box-shadow:0 2px 8px #aaa;">
+  </div>
 </body>
 </html>
