--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
   <h2>Passion Monthly Contribution Viewer</h2>
 
+  <!-- Download link -->
+  <p>
+    <a href="data.xlsx" download class="download-btn">⬇️ Download Excel File</a>
+  </p>
+
   <!-- Excel screenshot display -->
   <div style="text-align:center; margin-top:30px;">
     <img src="excel_screenshot.png" alt="Excel Sheet Screenshot" style="max-width:90%; border:1px solid #ccc; box-shadow:0 2px 8px #aaa;">
